# MojoLauncher

./: .gitignore  .gitmodules  README.md  README_BN.md  README_RU.md  README_XL_BRANCH.md  SECURITY.md  build.gradle  build_analysis.md  buildlog.txt  buildlog2.txt  code_analysis.md  dataremoval.md  dependency_analysis.md  fabric (1).txt  fabric.txt  gradle.properties  project_summary.md  release  settings.gradle  strings (1).xml  strings.xml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android.yml  build.yml  cobalt-idk.yml  cobaltidk.yml  fear.yml  idk  ik.yml  release.yml  test.yml
_tmp_bytehook_aar/: AndroidManifest.xml
_tmp_shadowhook_aar/: AndroidManifest.xml
_tmp_shadowhook_aar/prefab/: prefab.json
app/: README_FOR_APP_MODULE.md
app_fearlauncher/: build.gradle
app_pojavlauncher/: aamc_upload.jks  build.gradle  google-services.json
app_pojavlauncher/libs/: ltw-release.aar
app_pojavlauncher/src/main/jni/: Android.mk  CMakeLists.txt  affinity.c  egl_bridge.c  gles_bridge.c  gles_bridge.h  input_bridge_v3.c  minibridge.c  pojavexec.h  vulkan_loader.c
app_pojavlauncher/src/main/jni/driver_helper/: nsbypass.c
app_pojavlauncher/src/main/jni/environ/: environ.h
app_pojavlauncher/src/main/jni/jre_launcher/: jre_launcher.c  native_library_hook.c
app_pojavlauncher/src/main/jni/jvm_hooks/: lwjgl_dlopen_hook.c
assets/original_drawables_for_restore/: README.md
gradle/: prefab_bypass.gradle
jre_lwjgl3glfw/: build.gradle
ng_gl4es/: build.gradle.kts
res/drawable/: button_play.xml  ic_robot_left.xml  ic_robot_right.xml  (+1 more)
(+777 files in other folders)
